(refactor) code cleanup and update unit tests